[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.23-alpha.2", features = ["blocking"] }
futures-util = "0.3"
serde_json = "1.0"
serde = "1.0"
tokio-tungstenite = {version = "0.21",features = ["native-tls"]}
coinbase-pro-rs = "0.8.1"
ed25519-dalek = "2.1.0"




